# gha-guard

./: .pre-commit-hooks.yaml  LEARNING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: cli.py  config.py
src/llm/: __init__.py  claude_client.py
src/parser/: __init__.py  workflow_parser.py
src/reporter/: __init__.py  console_reporter.py  enriched_reporter.py  json_reporter.py  sarif_reporter.py
src/rules/: __init__.py  dangerous_triggers.py  engine.py  permissions.py  script_injection.py  secret_handling.py  unpinned_actions.py
tests/: conftest.py  test_cli.py  test_config.py  test_llm.py  test_parser.py  test_reporter.py  test_rules.py  test_sarif.py
tests/fixtures/.github/workflows/: insecure-example.yml  secure-example.yml
