[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gha-guard"
version = "0.1.0"
description = "AI-enhanced GitHub Actions security scanner"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.39.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[project.scripts]
gha-guard = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
# Third-party libraries without bundled stubs
ignore_missing_imports = true
# Exclude test files from strict checks (they use dynamic patterns)
exclude = ["tests/"]
